<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textEmailReg"
                    android:layout_marginTop="30dp"
                    android:autofillHints=""
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_email"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:hint="@string/password"
                    android:inputType="textPassword" />


                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_password"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/textEmailReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/email_registration"
                    android:textColor="@color/Black"
                    android:textSize="25sp" />


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_confirm_password"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/theme_button"
                    android:text="@string/register" />

                <TextView
                    android:id="@+id/cardInfo"
                    android:layout_width="223dp"
                    android:layout_height="33dp"
                    android:layout_below="@+id/btn_register"
                    android:layout_alignStart="@+id/btn_register"
                    android:layout_alignEnd="@+id/btn_register"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="19dp"
                    android:layout_marginEnd="144dp"
                    android:layout_marginBottom="45dp"
                    android:text="@string/add_credit_debit_card_optional" />

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible"/>

</RelativeLayout>